# DreamCC

./: .gitignore  README.md
clients/Client3/: build_excel.bat  build_exi.bat  import-map.json  libs  package.json  tsconfig.json
clients/Client3/libs/: dream-cc-core.d.ts  dream-cc-core.mjs
configs/: constants.xlsx  language.xlsx  level.xlsx  maps.xlsx  monster.xlsx  skills.xlsx  tower.xlsx
dream-cc/dream-cc-ai/: esbuild.js  package-lock.json  package.json  tsconfig.json
dream-cc/dream-cc-ai/src/: index.ts
dream-cc/dream-cc-core/: build-debug.bat  copy2Client.bat  esbuild.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
dream-cc/dream-cc-core/src/: Engine.ts  (+2 more)
dream-cc/dream-cc-ecs/: copy2Client.bat  package-lock.json  package.json
dream-cc/dream-cc-gui/: esbuild.js  package-lock.json  package.json  tsconfig.json
dream-cc/dream-cc-pathfinding/: esbuild.js  package-lock.json  package.json  tsconfig.json
dream-cc/fairygui-cc/: copy2Client.bat  package-lock.json  package.json
dream-cc/fgui-dream-cc/: GenCode_TS.ts  main.js
tools/dream-cc-plugin/: README.md  package.json
tools/dream_cli/: Cargo.toml
tools/dream_cli/src/: lib.rs  main.rs
tools/dream_cli/src/excels/: args.rs  code_generater.rs  datas.rs  excel2json.rs  mod.rs  utils.rs
tools/dream_cli/src/modules/: datas.rs  export2ts.rs  export_to_ts.rs  mod.rs  module_export.rs  utils.rs
tools/dream_cli/src/utils/: data.rs  file_utils.rs  mod.rs
ui_project/: FGUIProject.fairy
ui_project/.objs/: fonts.json  workspace.json
ui_project/settings/: Common.json  Publish.json
(+457 files in other folders)
