[package]
name = "dream_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_derive = { version = "4.5.32" } 
deno_ast = "0.46.2"
linked-hash-map = "0.5.6"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
umya-spreadsheet = "2.2.3"
zip = "2.2.3"
